Fix Sonarcloud's issues